# Deep-Learning-Based-Delta-Neutral-Statistical-Arbitrage-on-Perpetual-Funding-Rates

./: .env.example  .gitignore  AGENTS.md  Proposal.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-showcase.yml
configs/: README.md
configs/backtests/: default.yaml
configs/data/: default.yaml
configs/demo/: default.yaml  exploratory_snapshot.yaml  exploratory_workflow.yaml  showcase.yaml  workflow.yaml
configs/features/: default.yaml
configs/integration/: default.yaml
configs/labels/: default.yaml
configs/models/: baseline.yaml  gru.yaml  lstm.yaml  tcn.yaml  transformer.yaml
configs/reports/: data_quality.yaml  final_report.yaml  final_report_with_exploratory.yaml  robustness.yaml
configs/signals/: default.yaml
contracts/: README.md
contracts/script/: DeployLocal.s.sol  README.md  ScriptBase.sol  UpdateVaultState.s.sol
contracts/src/: DeltaNeutralVault.sol  MockStablecoin.sol
contracts/test/: DeltaNeutralVault.t.sol  README.md
docs/: README.md  architecture.md  backtest.md  baselines.md  contracts.md  data_schema.md  demo.md  features.md  final_checklist.md  integration.md  labels.md  models.md  review_guide.md  robustness.md  signals.md
docs/architecture/: overview.md
docs/contracts/: vault.md
docs/demos/: frontend.md  pre_presentation_script.md  pre_presentation_script_qihang.tex
docs/modules/: backtesting.md  data-pipeline.md  data-quality-reporting.md  models-and-research.md
docs/plans/: 2026-04-09-course-project-implementation-plan.md  2026-04-16-final-report-and-showcase-design.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
notebooks/: README.md
src/: main.py
(+340 files in other folders)
